--- a/.gitignore
+++ b/.gitignore
@@ -4,31 +4,106 @@
 /node_modules
 /.pnp
 .pnp.js
+jspm_packages/
 
 # testing
 /coverage
+*.lcov
+.nyc_output
 
 # production
 /build
+build/Release
+out
+dist
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env
-env.json
-
+*.log
+*.tsbuildinfo
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
 
+# Environment files
+.env
+.env.*
+!.env.example
+env.json
+
+# IDE and editor files
 .github/
 .vscode/
+.vscode-test
 .idea/
 *.sublime-project
 *.sublime-workspace
 .claude/
-*.log
-*.tsbuildinfo
+
+# Diagnostic reports
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage and test directories
+lib-cov
+coverage
+
+# Build tools and caches
+.grunt
+.cache
+.parcel-cache
+.temp
+.npm
+.eslintcache
+.stylelintcache
+.node_repl_history
+*.tgz
+.yarn-integrity
+
+# Framework specific
+.next
+.nuxt
+.svelte-kit/
+.docusaurus
+.serverless/
+.fusebox/
+.dynamodb/
+.firebase/
+.tern-port
+
+# Snowpack
+web_modules/
+
+# Bower
+bower_components
+
+# node-waf configuration
+.lock-wscript
+
+# VuePress
+.vuepress/dist
+.vuepress/cache
+**/.vitepress/dist
+**/.vitepress/cache
+
+# Gatsby
+# .cache/ (commented as it conflicts with general .cache above)
+
+# Yarn v3
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
